WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91653
[chromium] Fix crash in DragImageTest caused by
r122996
https://bugs.webkit.org/show_bug.cgi?id=91653
Summary
[chromium] Fix crash in DragImageTest caused by r122996
Varun Jain
Reported
2012-07-18 12:44:05 PDT
[chromium] Fix crash in DragImageTest caused by
r122996
Attachments
Patch
(1.36 KB, patch)
2012-07-18 12:45 PDT
,
Varun Jain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Varun Jain
Comment 1
2012-07-18 12:45:49 PDT
Created
attachment 153067
[details]
Patch
Tony Chang
Comment 2
2012-07-18 12:51:17 PDT
Comment on
attachment 153067
[details]
Patch Clearing flags on attachment: 153067 Committed
r123001
: <
http://trac.webkit.org/changeset/123001
>
Tony Chang
Comment 3
2012-07-18 12:51:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug