[chromium] Fix crash in DragImageTest caused by r122996 https://bugs.webkit.org/show_bug.cgi?id=91653

Patch by Varun Jain <varunjain@chromium.org> on 2012-07-18
Reviewed by Tony Chang.

Covered by existing DragImageTest.

* platform/chromium/DragImageChromiumSkia.cpp:
(WebCore::deleteDragImage):

git-svn-id: svn://svn.chromium.org/blink/trunk@123001 bbb929c8-8fbe-4397-9dbb-9b2b20218538