third_party/WebKit/Source/WebCore/platform/chromium/DragImageChromiumSkia.cpp
@@ -53,7 +53,8 @@ IntSize dragImageSize(DragImageRef image)
 
 void deleteDragImage(DragImageRef image)
 {
-    delete image->bitmap;
+    if (image)
+        delete image->bitmap;
     delete image;
 }
 
